@@ -25,7 +25,6 @@ DECL|function|ensureLineEdit
 DECL|function|ensureListView
 DECL|function|getDouble
 DECL|function|getInt
-DECL|function|getInteger
 DECL|function|getItem
 DECL|function|getText
 DECL|function|inputMode
